# ci-failure-agent-spam-scam-fixing-filter

./: .env  .env.example  ACTION_ITEMS_AND_NEXT_PHASES.md  ADVANCED_ARCHITECTURE.md  AI_SOC_SECURITY_OPERATIONS_SYSTEM.md  API_DOCUMENTATION_AND_INTEGRATION.md  ARCHITECTURE_AND_DESIGN_DECISIONS.md  AWS_DEPLOYMENT_EXECUTION_CHECKLIST.md  AWS_EKS_DEPLOYMENT_GUIDE.md  AWS_FREE_TIER_DEPLOYMENT_GUIDE_STEP_BY_STEP.md  CI_CD_PIPELINE_SETUP.md  CI_CD_VERIFICATION.md  CODE_REVIEW_AND_ANALYSIS_REPORT.md  COMPLETE_DEPLOYMENT_ROADMAP.md  COMPREHENSIVE_DOCUMENTATION_INDEX.md  COST_ANALYSIS_FREE_AND_LOW_COST_OPTIONS.md  COST_OPTIMIZATION_STRATEGY_DECEMBER_2025.md  CRITICAL_BUG_FIX_SUMMARY.md  DEPLOYMENT_EXECUTION_PLAYBOOK.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ROADMAP.md  DEPLOYMENT_STEPS_6-10.md  DEPLOYMENT_SUCCESS_AWS_EC2.md  DEVBOTTEAM_DEPLOYMENT_SYSTEM.md  DEVELOPER_ACCELERATION_KIT.md  DEVELOPMENT_SESSION_SUMMARY.md  DISASTER_RECOVERY.md  DISASTER_RECOVERY_AND_BACKUP_PROCEDURES.md  DISASTER_RECOVERY_PLAN_DECEMBER_2025.md  Dockerfile  E2E_TESTING_AND_VALIDATION.md  EXECUTION_GUIDE_STEPS_6_10.md  GO_LIVE_ANNOUNCEMENT_DECEMBER_16.md  IMMEDIATE_ACTION_PLAN_NEXT_24_HOURS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE_PHASE1_TERRAFORM.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_ROADMAP_PHASE_3.md  INCIDENT_RESPONSE_PLAYBOOK_DECEMBER_2025.md  INTELLIGENT_CHATBOT_SYSTEM.md  (+75 more)
PHASE_3_5_API_DOCUMENTATION.md/: PHASE_3_5_API_DOCUMENTATION.md
PHASE_3_6_PERFORMANCE_OPTIMIZATION.md/: PHASE_3_6_PERFORMANCE_OPTIMIZATION.md
PREDICTIVE_SUGGESTIONS_MODULE.md/: PREDICTIVE_SUGGESTIONS_MODULE.md
(+95 files in other folders)
